[package]
name = "atlas_workspace_app"
version = "0.1.0"
edition = "2021"
description = "AtlasWorkspace IDE host — Phase 4 stub"

[[bin]]
name = "atlas_workspace"
path = "src/main.rs"

[dependencies]
atlas_core      = { workspace = true }
atlas_engine    = { workspace = true }
atlas_workspace = { workspace = true }
atlas_editor    = { workspace = true }
atlas_ui        = { workspace = true }
atlas_pipeline  = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }