[package]
name = "novaforge_editor_app"
version = "0.1.0"
edition = "2021"
description = "NovaForge voxel world editor — Phase 2 stub"

[[bin]]
name = "novaforge_editor"
path = "src/main.rs"

[dependencies]
atlas_core                 = { workspace = true }
atlas_engine               = { workspace = true }
atlas_editor               = { workspace = true }
atlas_workspace            = { workspace = true }
atlas_ui                   = { workspace = true }
novaforge_editor_adapter   = { workspace = true }
tracing                    = { workspace = true }
tracing-subscriber         = { workspace = true }