[package]
name = "atlas_engine"
version = "0.1.0"
edition = "2021"
description = "ECS app setup and plugin registry (Phase 3)"

[dependencies]
atlas_core    = { workspace = true }
atlas_physics = { path = "../atlas_physics" }
serde         = { workspace = true }
tracing       = { workspace = true }
