[package]
name = "atlas_workspace"
version = "0.1.0"
edition = "2021"
description = "AtlasWorkspace host-app logic (Phase 4)"

[dependencies]
atlas_core     = { workspace = true }
atlas_pipeline = { path = "../atlas_pipeline" }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
