[package]
name = "novaforge_game"
version = "0.1.0"
edition = "2021"
description = "Game logic: fly-camera, player stats, voxel interaction, and egui HUD"

[dependencies]
atlas_core       = { workspace = true }
novaforge_voxel  = { workspace = true }
novaforge_world  = { workspace = true }
bevy             = { workspace = true }
bevy_voxel_world = { workspace = true }
bevy_egui        = { workspace = true }
tracing          = { workspace = true }
